--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
         <div class="row">
           <div class="col-5">
             <div class="pb-3 ">
-            <img src="logo-dark.svg" alt="logo">
+            <img src="/projects/DreamsTour/all images/logo-dark.svg" alt="logo">
           </div>
             <p class="footer-tag" style="color: rgb(99, 99, 99)">At Dreams Tour, we are committed to delivering a seamless and unforgettablecruise experience.</p>
             <p class="fw-bolder fs-5 mb-0">Suscribe to Our Newsletter</p>
