--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <header class="header-1">
           <div class="top-box">
             <div class="logo">
-              <img src="/projects/DreamsTour/all images/logo-dark.svg" alt="" />
+              <img src="all images/logo-dark.svg" alt="" />
             </div>
             <div class="menu ">
               <ul class="menu-list">
@@ -136,43 +136,43 @@
         </header>
         <div class="page-2-hero-content row">
           <div class="img-1 col-2">
-          <img src="/projects/DreamsTour/all images/cruise-15.jpg" alt="" style="border-radius: 40%;">
+          <img src="all images/cruise-15.jpg" alt="" style="border-radius: 40%;">
           <a href="" class="img-1-text">Luxury Cruise</a>
           </div>
           <div class="img-1 col-2">
-          <img src="/projects/DreamsTour/all images/cruise-16.jpg" alt=""style="border-radius: 40%;">
+          <img src="all images/cruise-16.jpg" alt=""style="border-radius: 40%;">
           <a href="" class="img-1-text">Adventure Cruise</a>
           </div>
           <div class="img-1 col-2">
-          <img src="/projects/DreamsTour/all images/cruise-17.jpg" alt=""style="border-radius: 40%;">
+          <img src="all images/cruise-17.jpg" alt=""style="border-radius: 40%;">
           <a href="" class="img-1-text">Expedition Cruise</a>
           </div>
           <div class="img-1 col-2">
-          <img src="/projects/DreamsTour/all images/cruise-18.jpg" alt=""style="border-radius: 40%;">
+          <img src="all images/cruise-18.jpg" alt=""style="border-radius: 40%;">
           <a href="" class="img-1-text">Family Cruise</a>
           </div>
           <div class="img-1 col-2">
-          <img src="/projects/DreamsTour/all images/cruise-19.jpg" alt=""style="border-radius: 40%;">
+          <img src="all images/cruise-19.jpg" alt=""style="border-radius: 40%;">
           <a href="" class="img-1-text">River Cruise</a>
           </div>
           <div class="img-1 col-2">
-          <img src="/projects/DreamsTour/all images/cruise-20.jpg" alt="" style="border-radius: 40%;">
+          <img src="all images/cruise-20.jpg" alt="" style="border-radius: 40%;">
          <a href="" class="img-1-text">World Cruises</a>
           </div>
           <div class="img-1 col-2">
-            <img src="/projects/DreamsTour/all images/cruise-15.jpg" alt="" style="border-radius: 40%;">
+            <img src="all images/cruise-15.jpg" alt="" style="border-radius: 40%;">
             <a href="" class="img-1-text">Luxury Cruise</a>
             </div>
             <div class="img-1 col-2">
-              <img src="/projects/DreamsTour/all images/cruise-18.jpg" alt=""style="border-radius: 40%;">
+              <img src="all images/cruise-18.jpg" alt=""style="border-radius: 40%;">
               <a href="" class="img-1-text">Family Cruise</a>
               </div>
               <div class="img-1 col-2">
-                <img src="/projects/DreamsTour/all images/cruise-16.jpg" alt=""style="border-radius: 40%;">
+                <img src="all images/cruise-16.jpg" alt=""style="border-radius: 40%;">
                 <a href="" class="img-1-text">Adventure Cruise</a>
                 </div>
                 <div class="img-1 col-2">
-                  <img src="/projects/DreamsTour/all images/cruise-19.jpg" alt=""style="border-radius: 40%;">
+                  <img src="all images/cruise-19.jpg" alt=""style="border-radius: 40%;">
                   <a href="" class="img-1-text">River Cruise</a>
                   </div>
         </div>
@@ -210,10 +210,10 @@
           <div class="page-3-imgs">
             <div class="left-side-1">
               <p class="exp-15"> 15 Years Of Experience </p>
-              <img src="/projects/DreamsTour/all images/cruise-22.jpg" alt="">
+              <img src="all images/cruise-22.jpg" alt="">
             </div>
              <div class="left-side-2">
-              <img src="/projects/DreamsTour/all images/cruise-21.jpg" alt="">
+              <img src="all images/cruise-21.jpg" alt="">
              </div>
           </div>
           <div class="page-3-note">
@@ -260,7 +260,7 @@
             
              <div class="main-image-box position-relative">
                <div class="overlay-black">
-                 <img src="/projects/DreamsTour/all images/destination-07.jpg" alt="destination" width="100%">
+                 <img src="all images/destination-07.jpg" alt="destination" width="100%">
                </div>
                <div class="image-content">
                  <p class="text-center mb-0 text-white fw-bold heading-first">Caribbean </p>
@@ -270,7 +270,7 @@
              
              <div class="main-image-box position-relative">
               <div class="overlay-black">
-                <img src="/projects/DreamsTour/all images/destination-08.jpg" alt="destination" width="100%">
+                <img src="all images/destination-08.jpg" alt="destination" width="100%">
               </div>
               <div class="image-content">
                 <p class="text-center mb-0 text-white fw-bold heading-first">Canary Islands</p>
@@ -281,7 +281,7 @@
           <div class="col-3">
             <div class="main-image-box position-relative">
               <div class="overlay-black">
-                <img src="/projects/DreamsTour/all images/destination-09.webp" alt="destination" width="100%">
+                <img src="all images/destination-09.webp" alt="destination" width="100%">
               </div>
               <div class="image-content">
                 <p class="text-center mb-0 text-white fw-bold heading-first">Mediterranean </p>
@@ -290,7 +290,7 @@
             </div>
             <div class="main-image-box position-relative">
               <div class="overlay-black">
-                <img src="/projects/DreamsTour/all images/destination-10.jpg" alt="destination" width="100%">
+                <img src="all images/destination-10.jpg" alt="destination" width="100%">
               </div>
               <div class="image-content">
                 <p class="text-center mb-0 text-white fw-bold heading-first">Northern Europe </p>
@@ -301,7 +301,7 @@
           <div class="col-3">
             <div class="main-image-box position-relative">
               <div class="overlay-black">
-                <img src="/projects/DreamsTour/all images/destination-11.jpg" alt="destination" width="100%">
+                <img src="all images/destination-11.jpg" alt="destination" width="100%">
               </div>
               <div class="image-content">
                 <p class="text-center mb-0 text-white fw-bold heading-first">Alaska </p>
@@ -310,7 +310,7 @@
             </div>
             <div class="main-image-box position-relative">
               <div class="overlay-black">
-                <img src="/projects/DreamsTour/all images/destination-12.webp" alt="destination" width="100%">
+                <img src="all images/destination-12.webp" alt="destination" width="100%">
               </div>
               <div class="image-content">
                 <p class="text-center mb-0 text-white fw-bold heading-first">Panama Canal </p>
@@ -321,7 +321,7 @@
           <div class="col-3">
             <div class="main-image-box position-relative">
               <div class="overlay-black">
-                <img src="/projects/DreamsTour/all images/destination-13.jpg" alt="destination" width="100%">
+                <img src="all images/destination-13.jpg" alt="destination" width="100%">
               </div>
               <div class="image-content">
                 <p class="text-center mb-0 text-white fw-bold heading-first">Hawaiian Islands </p>
@@ -330,7 +330,7 @@
             </div>
             <div class="main-image-box position-relative">
               <div class="overlay-black">
-                <img src="/projects/DreamsTour/all images/destination-14.webp" alt="destination" width="100%">
+                <img src="all images/destination-14.webp" alt="destination" width="100%">
               </div>
               <div class="image-content">
                 <p class="text-center mb-0 text-white fw-bold heading-first">British Isles </p>
@@ -369,12 +369,12 @@
         <div class="col-3">
           <div class="page-5-cards pb-4" style="background-color: rgba(174, 174, 174, 0.559);">
             <div class="cruises-img">
-              <img src="/projects/DreamsTour/all images/cruise-01.webp" alt="cruise-1" width="100%">
+              <img src="all images/cruise-01.webp" alt="cruise-1" width="100%">
             </div>
             <div class="container">
             <div class="page-5-cards-inside pt-3 pb-1" >
              <div class="reviews">
-              <img src="/projects/DreamsTour/all images/user-03.webp" alt="user-03" width="8%"> <span class="cust-name px-1" style="border-right: 1px solid gray;">Beth williams</span> <span class="rating px-2 mx-1" style="background-color: rgb(255, 195, 31); border-radius: 5px; ">5.0</span> <span class="no.-revi">(400 Reviews)</span>
+              <img src="all images/user-03.webp" alt="user-03" width="8%"> <span class="cust-name px-1" style="border-right: 1px solid gray;">Beth williams</span> <span class="rating px-2 mx-1" style="background-color: rgb(255, 195, 31); border-radius: 5px; ">5.0</span> <span class="no.-revi">(400 Reviews)</span>
              </div> 
              <p class="fw-bold fs-5 mb-1">Super Auramarine</p>
              <p class="mb-2"><i class=" fa-solid fa-location-dot "></i> Cuitat Vella,Barcelona</p>
@@ -399,12 +399,12 @@
         </div><div class="col-3">
           <div class="page-5-cards pb-4" style="background-color: rgba(174, 174, 174, 0.559);">
             <div class="cruises-img">
-              <img src="/projects/DreamsTour/all images/cruise-02.webp" alt="cruise-1" width="100%">
+              <img src="all images/cruise-02.webp" alt="cruise-1" width="100%">
             </div>
             <div class="container">
             <div class="page-5-cards-inside pt-3 pb-1" >
              <div class="reviews">
-              <img src="/projects/DreamsTour/all images/user-03.webp" alt="user-03" width="8%"> <span class="cust-name px-1" style="border-right: 1px solid gray;">Beth williams</span> <span class="rating px-2 mx-1" style="background-color: rgb(255, 195, 31); border-radius: 5px; ">5.0</span> <span class="no.-revi">(400 Reviews)</span>
+              <img src="all images/user-03.webp" alt="user-03" width="8%"> <span class="cust-name px-1" style="border-right: 1px solid gray;">Beth williams</span> <span class="rating px-2 mx-1" style="background-color: rgb(255, 195, 31); border-radius: 5px; ">5.0</span> <span class="no.-revi">(400 Reviews)</span>
              </div> 
              <p class="fw-bold fs-5 mb-1">Super Auramarine</p>
              <p class="mb-2"><i class=" fa-solid fa-location-dot "></i> Cuitat Vella,Barcelona</p>
@@ -429,12 +429,12 @@
         </div><div class="col-3">
           <div class="page-5-cards pb-4" style="background-color: rgba(174, 174, 174, 0.559);">
             <div class="cruises-img">
-              <img src="/projects/DreamsTour/all images/cruise-03.webp" alt="cruise-1" width="100%">
+              <img src="all images/cruise-03.webp" alt="cruise-1" width="100%">
             </div>
             <div class="container">
             <div class="page-5-cards-inside pt-3 pb-1" >
              <div class="reviews">
-              <img src="/projects/DreamsTour/all images/user-03.webp" alt="user-03" width="8%"> <span class="cust-name px-1" style="border-right: 1px solid gray;">Beth williams</span> <span class="rating px-2 mx-1" style="background-color: rgb(255, 195, 31); border-radius: 5px; ">5.0</span> <span class="no.-revi">(400 Reviews)</span>
+              <img src="all images/user-03.webp" alt="user-03" width="8%"> <span class="cust-name px-1" style="border-right: 1px solid gray;">Beth williams</span> <span class="rating px-2 mx-1" style="background-color: rgb(255, 195, 31); border-radius: 5px; ">5.0</span> <span class="no.-revi">(400 Reviews)</span>
              </div> 
              <p class="fw-bold fs-5 mb-1">Super Auramarine</p>
              <p class="mb-2"><i class=" fa-solid fa-location-dot "></i> Cuitat Vella,Barcelona</p>
@@ -460,12 +460,12 @@
           <div class="col-3">
             <div class="page-5-cards pb-4" style="background-color: rgba(174, 174, 174, 0.559);">
               <div class="cruises-img">
-                <img src="/projects/DreamsTour/all images/cruise-03.webp" alt="cruise-1" width="100%">
+                <img src="all images/cruise-03.webp" alt="cruise-1" width="100%">
               </div>
               <div class="container">
               <div class="page-5-cards-inside pt-3 pb-1" >
                <div class="reviews">
-                <img src="/projects/DreamsTour/all images/user-03.webp" alt="user-03" width="8%"> <span class="cust-name px-1" style="border-right: 1px solid gray;">Beth williams</span> <span class="rating px-2 mx-1" style="background-color: rgb(255, 195, 31); border-radius: 5px; ">5.0</span> <span class="no.-revi">(400 Reviews)</span>
+                <img src="all images/user-03.webp" alt="user-03" width="8%"> <span class="cust-name px-1" style="border-right: 1px solid gray;">Beth williams</span> <span class="rating px-2 mx-1" style="background-color: rgb(255, 195, 31); border-radius: 5px; ">5.0</span> <span class="no.-revi">(400 Reviews)</span>
                </div> 
                <p class="fw-bold fs-5 mb-1">Super Auramarine</p>
                <p class="mb-2"><i class=" fa-solid fa-location-dot "></i> Cuitat Vella,Barcelona</p>
@@ -492,8 +492,8 @@
        <div class="view-all-btn"><a href class="https://dreamstour.dreamstechnologies.com/html/index-5.html" type="button">View All<i class="fa-solid fa-chevron-right"></i></a></div>
       <div class="page-5-footer">
         <div class="container px-5 py-4 my-5" style="border: 0px solid black; background-color: #212E47; border-radius: 10px; overflow: hidden; position: relative;">
-          <div style="position: absolute; top: 0px; left: 0px;"><img src="../DreamsTour/all images/bg-02.png" alt="img"></div>
-          <div style="position: absolute; bottom: 0px; right: 0px;"><img src="../DreamsTour/all images/bg-01.webp" alt="img"></div>
+          <div style="position: absolute; top: 0px; left: 0px;"><img src="../DreamsTourall images/bg-02.png" alt="img"></div>
+          <div style="position: absolute; bottom: 0px; right: 0px;"><img src="../DreamsTourall images/bg-01.webp" alt="img"></div>
         <div class="row py-4 px-5" style="color:#fff;">
           <div class="col-3">
             <p class="fw-bold fs-5 mb-1" style="text-align: center;"> <i class="fa-solid fa-globe me-2"></i>Desinations Worldwide</p>
@@ -518,12 +518,12 @@
     </section>
     <section class="page-6 mb-5">
      <div style="position: absolute; top: 0px; right: 0%;">
-        <img src="/projects/DreamsTour/all images/bg-03.webp" alt="">
+        <img src="all images/bg-03.webp" alt="">
       </div>
       <div class="container">
         <div class="row">
           <div class="col-6 ">
-            <img src="/projects/DreamsTour/all images/faq.webp" alt="faq" width="85%">
+            <img src="all images/faq.webp" alt="faq" width="85%">
           </div>
           <div class="col-6 mt-1 " style="position:relative;">
             <p class="mb-1 mt-4">Frequently Asked Questions</p>
@@ -555,7 +555,7 @@
             </div>
           </div>
           <div class="tilt-img col-4 " style="position: relative;">            
-            <img src="/projects/DreamsTour/all images/cruise-23.jpg" alt="slide-img" width="75%">
+            <img src="all images/cruise-23.jpg" alt="slide-img" width="75%">
           </div>
         </div>
         <div class="red-box">
@@ -567,7 +567,7 @@
         <div class="row">
           <div class="col-5">
             <div class="pb-3 ">
-            <img src="/projects/DreamsTour/all images/logo-dark.svg" alt="logo">
+            <img src="all images/logo-dark.svg" alt="logo">
           </div>
             <p class="footer-tag" style="color: rgb(99, 99, 99)">At Dreams Tour, we are committed to delivering a seamless and unforgettablecruise experience.</p>
             <p class="fw-bolder fs-5 mb-0">Suscribe to Our Newsletter</p>
