--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-   <link rel="stylesheet" href="/xyz/slick/slick.css">
+   <link rel="stylesheet" href="slick/slick.css">
   </head>
   <body>
     <section class="top-header">
@@ -630,9 +630,9 @@
       </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-<script src="/xyz/slick/slick.min.js"></script>
-<script src="/xyz/slick/slick.js"></script>
-   <script src="/xyz/slick/slick.min.js"></script>
+<script src="slick/slick.min.js"></script>
+<script src="slick/slick.js"></script>
+   <script src="slick/slick.min.js"></script>
 <script type="text/javascript">
    $(document).ready(function(){
      $('.first-slick').slick({
